tests/errors/test_13.x
// while conditional is not boolean

fn main() -> void {

    while 1 {
    }

}